--- a/index.html
+++ b/index.html
@@ -1,68 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Expense Tracker</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Expense Tracker</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <div class="container">
+
     <h1>Expense Tracker</h1>
 
-    <div class="input-group">
-      <label for="amount">Amount (INR):</label>
-      <input type="number" id="amount" placeholder="Enter amount" required>
-    </div>
+    <!-- Form for Adding Expenses -->
+    <form id="expenseForm" class="form">
+        <label for="amount">Amount:</label>
+        <input type="number" id="amount" name="amount" required><br><br>
 
-    <div class="input-group">
-      <label for="category">Category:</label>
-      <select id="category">
-        <option value="" selected disabled>Select Category</option>
-        <option value="food">Food</option>
-        <option value="transportation">Transportation</option>
-        <option value="college-supplies">College Supplies</option>
-        <option value="home-expenses">Home Expenses</option>
-        <option value="party">Party</option>
-        <option value="necessities">Necessities</option>
-      </select>
-    </div>
+        <label for="description">Description:</label>
+        <input type="text" id="description" name="description" required><br><br>
 
-    <button class="add-button" onclick="addExpense()">Add Expense</button>
+        <label for="category">Category:</label>
+        <select id="category" name="category" required>
+            <option value="">Select a category</option>
+            <option value="Food">Food</option>
+            <option value="Transportation">Transportation</option>
+            <option value="College Supplies">College Supplies</option>
+            <option value="Home Expenses">Home Expenses</option>
+            <option value="Party">Party</option>
+            <option value="Necessities">Necessities</option>
+            <option value="Other">Other</option>
+        </select><br><br>
 
-    <div class="delete-section">
-      <label for="deleteEntry">Select Entry to Delete:</label>
-      <select id="deleteEntry">
-        <option value="" selected disabled>Select Entry</option>
-      </select>
-      <button class="delete-button" onclick="deleteSelectedExpense()">Delete Entry</button>
-    </div>
+        <!-- Emoji Button for Add Expense -->
+        <button type="button" onclick="addExpense()">➕ Add Expense</button>
+    </form>
 
-    <div class="expense-summary">
-      <h2>Expense Summary</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Category</th>
-            <th>Amount (INR)</th>
-            <th>Date & Time</th>
-          </tr>
-        </thead>
-        <tbody id="expenseList">
-          <!-- Expense entries will be dynamically updated here -->
-        </tbody>
-      </table>
-      <div class="total-monthly-expenditure">
-        <p>Total Monthly Expenditure: <span id="totalMonthlyExpenditure">0</span> ₹</p>
-      </div>
-    </div>
+    <!-- Navigation Button -->
+    <button onclick="navigateToSummary()">View Expense Summary</button>
 
-    <button class="download-button" onclick="downloadMonthlyExpenses()">Download Monthly Expenses</button>
-  </div>
+    <script>
+        let db;
 
-  <script src="app.js"></script>
+        // Open or create the IndexedDB
+        let request = indexedDB.open("ExpensesDB", 1);
+
+        request.onerror = function(event) {
+            console.error("Database error: " + event.target.errorCode);
+            alert("Failed to open the database. Please try again later.");
+        };
+
+        request.onsuccess = function(event) {
+            db = event.target.result;
+        };
+
+        request.onupgradeneeded = function(event) {
+            let db = event.target.result;
+            let objectStore = db.createObjectStore("expenses", { keyPath: "id", autoIncrement: true });
+            objectStore.createIndex("amount", "amount", { unique: false });
+            objectStore.createIndex("description", "description", { unique: false });
+            objectStore.createIndex("category", "category", { unique: false });
+            objectStore.createIndex("date", "date", { unique: false });
+        };
+
+        // Function to add expense
+        function addExpense() {
+            const amount = document.getElementById('amount').value;
+            const description = document.getElementById('description').value;
+            const category = document.getElementById('category').value;
+
+            if (amount === '' || description === '' || category === '') {
+                alert('Please fill out all required fields.');
+                return;
+            }
+
+            let transaction = db.transaction(["expenses"], "readwrite");
+            let store = transaction.objectStore("expenses");
+
+            let expense = { amount: Number(amount), description, category, date: new Date().toLocaleDateString() };
+            let request = store.add(expense);
+
+            request.onerror = function(event) {
+                console.error("Error adding expense: " + event.target.errorCode);
+                alert("Failed to add expense. Please try again.");
+            };
+
+            request.onsuccess = function(event) {
+                console.log("Expense added successfully");
+                document.getElementById('expenseForm').reset();
+            };
+        }
+
+        // Function to navigate to summary.html
+        function navigateToSummary() {
+            window.location.href = 'summary.html';
+        }
+    </script>
+
 </body>
-
 </html>
